--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Backend practise</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <form id="form" action="/">
       <div class="field">
-        <label for="name">Name:</label>
+        <label for="username">Name:</label>
         <input type="text" id="username" name="username" />
       </div>
       <div class="field">
@@ -21,7 +22,9 @@
       </div>
       <button type="submit">Submit</button>
     </form>
-    <div id="content"></div>
+    <div id="content">
+      <div id="formforUpdate"></div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
